--- a/style.css
+++ b/style.css
@@ -176,6 +176,14 @@ h3 {
     font-family: 'code_pro_demoregular';
 }
 
+h4 {
+    font-family: 'code_pro_demoregular'
+}
+
+h5 {
+    font-size: 1.2em;
+}
+
 .full-page {
 	margin: 0;
 	padding: 0;
@@ -258,7 +266,8 @@ ol > li {
     margin: 0 0 6px 2em;
     padding-left: 1%;
     list-style: none;
-    background: #E9E9E9;
+    background: #F6F66;
+    padding-bottom: 5vh;
 }
 
 ol > li:before {
@@ -290,14 +299,36 @@ ol ol li:last-child {
     min-height: 20vh;
 }
 
-.col-md-2 {
+.col-md-3 {
     text-align: center;
     font-size: 1.5em;
     font-family: 'code_pro_demoregular';
 }
 
-.col-md-2 > svg {
-    width: 15%;
+.chart-container {
+    display: block;
+    width: 100%;
+    min-height: 15vh;
+    position: relative;
+    margin: 0 auto;
+}
+
+canvas {
+    width: 100%;
     height: auto;
+}
+
+.pie-legend li span {
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.pie-legend {
+    list-style: none;
+    text-align: left;
+    padding-left: 0;
+    padding-top: 2vh;
 }
 
