--- a/style.css
+++ b/style.css
@@ -316,9 +316,16 @@ ol ol li:last-child {
 }
 
 .row {
-    min-height: 140px; /* fallback */
-    min-height: 20vh;
     background-color: #F9F9F9;
+    padding-bottom: 10px;
+}
+
+.col-md-6 {
+    min-height: 220px;
+}
+
+.col-md-6 h5 {
+    padding-bottom: 50px;
 }
 
 .col-md-3 {
@@ -327,56 +334,86 @@ ol ol li:last-child {
     font-family: 'code_pro_demoregular';
 }
 
-.icon {
-    width: 6%;
-}
-
 .icon-container {
-    padding-top: 14px; /* fallback */
-    padding-bottom: 14px; /* fallback */
-
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    text-align: left;
     width: 100%;
     height: auto;
     font-family: 'code_pro_demoregular';
     font-size: 2.5em;
 }
 
+.left {
+    width: 80%;
+    text-align: left;
+    display: inline-block;
+    height: 50px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding-left: 4%;
+}
+
+.right {
+    width: 20%;
+    text-align: right;
+    display: inline-block;
+    height: 50px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding-right: 4%;
+}
+
+.icon-left {
+    width: 7%;
+}
+
+.icon-right {
+    width: 30%;
+}
+
 /* Pie Charts */
 
 .chart-container {
     display: block;
-    width: 100%;
-    min-height: 105px; /* fallback */
-    min-height: 15vh;
+    padding-top: 20px;
+    padding-bottom: 20px;
     position: relative;
     margin: 0 auto;
-    padding-top: 14px; /* fallback */
-    padding-top: 2vh;
 }
 
 canvas {
     width: 100%;
-    height: auto;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 /* Labels for Pie Charts */
 
-.pie-legend li span {
+.labels {
+    width: 100%;
+    height: auto;
+    text-align: left;
+}
+
+.colorbox {
     width: 1em;
     height: 1em;
     display: inline-block;
     margin-right: 5px;
 }
 
-.pie-legend {
-    list-style: none;
-    text-align: left;
-    padding-left: 0;
-    padding-top: 21px; /* fallback */
-    padding-top: 5vh;
+#green {
+    background-color: #46BFBD;
+}
+
+#grey {
+    background-color: #4D5360;
+}
+
+#red {
+    background-color: #F7464A;
 }
 
 footer {
